# CalendarAgentRL

./: .gitignore  README.md  prompt.md  pyproject.toml
configs/eval/: calendar-agent-gpt55-reference-20.toml  calendar-agent-heldout-100.toml  calendar-agent-heldout-generalization-100.toml  calendar-agent-heldout-hard-100.toml  calendar-agent-qwen-4b-dev-100.toml
configs/rl/: calendar-agent-qwen-35b.toml  calendar-agent-qwen-4b-budget.toml  calendar-agent-splits.md
environments/calendar_agent/: PLAN.md  PSEUDOCODE.md  README.md  calendar_agent.py  calendar_tui.py  pyproject.toml  test_calendar_agent.py
